@@ -360,7 +360,7 @@ public class UserController {
         return ResponseEntity.ok(Map.of("message", "Settings updated successfully"));
     }
 
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/admin/saveUser")
     public ResponseEntity<?> saveUser(
             @RequestParam(name = "username", required = true) String username,
@@ -468,7 +468,7 @@ public class UserController {
         return ResponseEntity.ok(Map.of("message", "User created successfully"));
     }
 
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/admin/inviteUsers")
     public ResponseEntity<?> inviteUsers(
             @RequestParam(name = "emails", required = true) String emails,
@@ -585,7 +585,7 @@ public class UserController {
         }
     }
 
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/admin/changeRole")
     @Transactional
     public ResponseEntity<?> changeRole(
@@ -651,7 +651,7 @@ public class UserController {
         return ResponseEntity.ok(Map.of("message", "User role updated successfully"));
     }
 
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/admin/changePasswordForUser")
     public ResponseEntity<?> changePasswordForUser(
             @RequestParam(name = "username") String username,
@@ -725,7 +725,7 @@ public class UserController {
         return ResponseEntity.ok(Map.of("message", "User password updated successfully"));
     }
 
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/admin/changeUserEnabled/{username}")
     public ResponseEntity<?> changeUserEnabled(
             @PathVariable("username") String username,
@@ -777,7 +777,7 @@ public class UserController {
                 Map.of("message", "User " + (enabled ? "enabled" : "disabled") + " successfully"));
     }
 
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/admin/unlockUser/{username}")
     @Audited(type = AuditEventType.SETTINGS_CHANGED, level = AuditLevel.BASIC)
     public ResponseEntity<?> unlockUser(@PathVariable("username") String username) {
@@ -785,7 +785,7 @@ public class UserController {
         return ResponseEntity.ok(Map.of("message", "User account unlocked successfully"));
     }
 
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    @PreAuthorize("hasRole('ADMIN')")
     @PostMapping("/admin/deleteUser/{username}")
     @Audited(type = AuditEventType.USER_PROFILE_UPDATE, level = AuditLevel.BASIC)
     public ResponseEntity<?> deleteUser(
@@ -978,25 +978,54 @@ public class UserController {
         }
     }
 
-    /**
-     * List all enabled users for selection in signing workflows.
-     *
-     * @param principal The authenticated user
-     * @return List of user summaries
-     */
+    // Lists enabled users for the signing picker; 'org' scope = instance-wide, else caller's team.
     @GetMapping("/users")
     public ResponseEntity<List<UserSummaryDTO>> listUsers(Principal principal) {
         if (principal == null) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
         }
 
+        Optional<User> callerOpt = userService.findByUsernameIgnoreCase(principal.getName());
+
+        // Anonymous (SaaS) accounts must never enumerate users, in any scope or team.
+        if (callerOpt.map(UserController::isAnonymousUser).orElse(false)) {
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+        }
+
+        // Fail-closed: only literal "org" opens the whole instance; anything else scopes to team.
+        String scope = applicationProperties.getStorage().getSigning().getUserListScope();
+        boolean teamScoped = !"org".equalsIgnoreCase(scope == null ? "" : scope.trim());
+
+        List<User> source;
+        if (teamScoped) {
+            Team callerTeam = callerOpt.map(User::getTeam).orElse(null);
+            if (callerTeam == null || isSystemTeam(callerTeam)) {
+                // No team or a shared system team: return only the caller, not the team's members.
+                source = callerOpt.map(List::of).orElse(List.of());
+            } else {
+                // Scopes via the single User.team FK; revisit if multi-team membership is added.
+                source = userRepository.findAllByTeamId(callerTeam.getId());
+            }
+        } else {
+            source = userRepository.findAll();
+        }
+
         List<UserSummaryDTO> users =
-                userRepository.findAll().stream()
-                        .filter(User::isEnabled)
-                        .map(this::toUserSummaryDTO)
-                        .collect(java.util.stream.Collectors.toList());
+                source.stream().filter(User::isEnabled).map(this::toUserSummaryDTO).toList();
 
         return ResponseEntity.ok(users);
+    }
+
+    // SaaS anonymous accounts, which must not enumerate users.
+    private static boolean isAnonymousUser(User user) {
+        return AuthenticationType.ANONYMOUS.name().equalsIgnoreCase(user.getAuthenticationType());
+    }
+
+    // System teams (Default/Internal) are not enumerable through the signing picker.
+    private static boolean isSystemTeam(Team team) {
+        String name = team.getName();
+        return TeamService.DEFAULT_TEAM_NAME.equalsIgnoreCase(name)
+                || TeamService.INTERNAL_TEAM_NAME.equalsIgnoreCase(name);
     }
 
     private UserSummaryDTO toUserSummaryDTO(User user) {
